tests222/tests2/test392.out
lli: <stdin>:1:1: error: expected top-level entity
line 14: syntax error
^
